# yast-sysconfig

./: .cvsignore  .gitignore  .travis.yml  MAINTAINER  Makefile.am  Makefile.cvs  README  README.md  README_skeleton  RPMNAME  Rakefile  configure.in  configure.in.in  y2c_rc_config.spec.in  yast2-config-rc_config.spec.in  yast2-config-rcconfig.spec.in  yast2-config-sysconfig.spec.in  yast2-sysconfig.spec.in
.github/workflows/: ci.yml
doc/: Makefile.am  NewDistribution.tex  README  metadata.txt
doc/autodocs/: .gitignore
package/: y2c_rc_config.changes  yast2-config-rcconfig.changes  yast2-config-sysconfig.changes  yast2-sysconfig.changes  yast2-sysconfig.spec
rake/configs/: console.rb
spec/: spec_helper.rb
src/: .cvsignore  Makefile.am  RCDirectory.cpp  RCDirectory.h  RCVariable.cpp  RCVariable.h  README.change_meta_rc_config  Sysconfig.ycp  TreeNode.cpp  TreeNode.h  cmdline.ycp  complex.ycp  create_dirtree_from_eddb.pl  create_eddb.pl  descriptions  dialogs.ycp  helps.ycp  main.cpp  menuentry_firewall.y2cc  menuentry_firewall.ycp  menuentry_rc_config.y2cc  menuentry_rc_config.ycp  menuentry_sysconfig.y2cc  meta_fw.config  meta_rc.config  meta_sys.config  parse_configs.pl  powertweak.agent  powertweak.desktop  powertweak.y2cc  powertweak.ycp  rc_config.ycp  rc_config_step1.ycp  rc_dialogs.ycp  rc_process_db.ycp  routines.ycp  sys_dialogs.ycp  sysconfig.desktop  sysconfig.y2cc  sysconfig.ycp  (+7 more)
src/autoyast-rnc/: sysconfig.rnc
src/clients/: sysconfig.rb  sysconfig_auto.rb  sysconfig_auto.ycp
src/config/: Makefile.am
src/desktop/: org.opensuse.yast.Sysconfig.desktop  sysconfig.desktop
src/include/sysconfig/: cmdline.rb  cmdline.ycp  complex.rb  complex.ycp  dialogs.rb  helps.rb  routines.rb  wizards.rb  wizards.ycp
src/modules/: Sysconfig.rb  Sysconfig.ycp
test/: Makefile.am  autoyast_test.rb  rake_config_spec.rb  read_test.rb  sysconfig_autoyast_test.rb  sysconfig_test.rb  test_helper.rb  write_test.rb
test/data/sysconfig/: postfix
test/data/sysconfig/network/: config  dhcp
testsuite/tests/: Set_Export.out  Set_Export.rb  Set_Export.ycp  get_description.out  get_description.rb  get_description.ycp  get_file_from_id.out  get_file_from_id.rb  get_file_from_id.ycp  get_metadata.out  get_metadata.rb  get_metadata.ycp  get_name_from_id.out  get_name_from_id.rb  get_name_from_id.ycp  get_only_comment.out  get_only_comment.rb  get_only_comment.ycp  parse_metadata.out  parse_metadata.rb  parse_metadata.ycp  parse_options.out  parse_options.ycp  remove_whitespaces.out  remove_whitespaces.rb  remove_whitespaces.ycp  set_value.out  set_value.rb  set_value.ycp
