dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/Makefile.am) dnl a source file from your sub dir, but acinclude.m4 does the job
AC_CANONICAL_SYSTEM
AC_ARG_PROGRAM

VERSION=`cat ${srcdir}/VERSION`
RPMNAME=`cat ${srcdir}/RPMNAME`
MAINTAINER=`cat ${srcdir}/MAINTAINER`
DOCDIR=/usr/share/doc/packages/yast2
YAST2DIR=/usr/lib/YaST2

prefix=$YAST2DIR

AM_INIT_AUTOMAKE($RPMNAME, $VERSION) dnl searches for some needed programs

AC_SUBST(VERSION)
AC_SUBST(RPMNAME)
AC_SUBST(MAINTAINER)
AC_SUBST(DOCDIR)
AC_SUBST(YAST2DIR)

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_CXX

dnl Allow conditionals in .am files
AM_CONDITIONAL(ISIX86, [case `uname -m` in i*86) true;; *) false;; esac])
AM_CONDITIONAL(ISALPHA, test `uname -m` = alpha)
AM_CONDITIONAL(ISSPARC, test `uname -m` = sparc)
AM_CONDITIONAL(ISPPC, test `uname -m` = ppc)

CFLAGS="${CFLAGS} -Wall -Wmissing-prototypes -Wformat -O2  "
CXXFLAGS="${CXXFLAGS} -Wall -Wmissing-prototypes -Wformat -O2 "

dnl Force chars to be signed on ppc, it's the default on intel and alpha
if test "`uname -m`" = "ppc"; then
CFLAGS="${CFLAGS} -fsigned-char"
CXXFLAGS="${CXXFLAGS} -fsigned-char"
AC_SUBST(CFLAGS)
AC_SUBST(CXXFLAGS)
fi

AC_OUTPUT(Makefile
	package/yast2-config-rc_config.spec:yast2-config-rc_config.spec.in
	src/Makefile
	doc/Makefile)
